--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -12,7 +12,8 @@ body
             nav.navbar.navbar-expand-lg(data-bs-theme="dark").pb-5.pt-4
                 .container-fluid.d-flex.justify-content-between
                     a.navbar-brand(href='#') 
-                        img(src="img/logo.png" alt="")
+                        picture
+                            img(src="img/logo.png" alt="")
                     button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarNavAltMarkup' aria-controls='navbarNavAltMarkup' aria-expanded='false' aria-label='Toggle navigation')
                         span.navbar-toggler-icon
                     #navbarNavAltMarkup.collapse.navbar-collapse.justify-content-end
@@ -39,7 +40,7 @@ body
             .choose.text-center.pb-5
                 h2 обери свій план подорожі
                 p Наша фірма -лідер на ринку у своїй сфері
-                a(href='#').svg-arrow
+                a(href='#spec').svg-arrow
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M480-200 240-440l56-56 184 183 184-183 56 56-240 240Zm0-240L240-680l56-56 184 183 184-183 56 56-240 240Z"/></svg>
     main
         section.container
@@ -59,7 +60,8 @@ body
             .island-private.row.pb-5
                 .img-private.col-12.col-lg-3.col-xxl-4.pb-5
                     picture
-                        img.w-100.img-fluid(src="img/private-island.png" alt="")
+                        source(srcset="img/private-island.jpg")
+                        img.w-100.img-fluid(src="img/private-island.webp" alt="")
                 .information-private.col-12.col-lg-9.col-xxl-8
                     h2.pb-3 Дивовижний безлюдний острів, який зводить людей з розуму
                     .info-tour.row
@@ -81,16 +83,18 @@ body
                             span живи яскраво!
                         p.pb-4 
                             span Полюбляєш екстрим та пригоди? Тоді тобі точно до нас! Мрієш стати на сапборд, але ніяк не міг наважитсь? Наші досвдчені інструктори навчать тебе вміло «піймати хвилі» та відчути себе справжнім сьорфером!
-                        a.btn(href="") детальніше
+                        a.btn(href="").btn-no-people детальніше
                     .comment.col-12.col-xl-6.pt-3
                         .svg-comment.d-flex.justify-content-center.pb-3
                             <svg version="1.2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 37" width="42" height="37"><style>.a{fill:#ffb700}</style><path class="a" d="m39.8 0h-13c-1.2 0-2.2 1-2.2 2.1v13.1c0 1.2 1 2.2 2.2 2.2h6.2q-0.1 5.1-2.4 8.2-1.8 2.4-5.4 4c-1.1 0.5-1.6 1.8-1 2.9l1.5 3.3c0.5 1 1.8 1.5 2.8 1q4.3-1.8 7.2-4.7 3.6-3.4 5-7.8 1.3-4.3 1.3-11.9v-10.3c0-1.1-1-2.1-2.2-2.1zm-35.2 36.8q4.2-1.8 7.2-4.7 3.6-3.4 4.9-7.7 1.3-4.4 1.3-12v-10.3c0-1.1-0.9-2.1-2.1-2.1h-13.1c-1.2 0-2.2 1-2.2 2.1v13.1c0 1.2 1 2.2 2.2 2.2h6.3q-0.2 5.1-2.4 8.2-1.8 2.4-5.4 4c-1.1 0.5-1.6 1.8-1.1 2.9l1.6 3.3c0.5 1 1.7 1.5 2.8 1z"/></svg>
                         p.description-comment.pb-3.pt-4 Чудова туристична фірма, що повністю виправдала мої очікування від подорожі. Я був приємно вражений екскурсіями, що для мене підібрали, працюють спражні професіонали своєї справи. 
                         p.name-comment.text-center Олег Набережний
                         p.pozhizny.text-center клієнт
-                        img.client(src="../img/comment-face.png", alt="")
+                        picture
+                            source(srcset="../img/comment-face.jpg")
+                            img.client(src="../img/comment-face.webp", alt="")
         section.container
-            .spec 
+            .spec#spec
                 h2.text-center.pt-5.pb-1 Спеціальні пропозиції тижня
                 p.text-center.pb-4 Гарячі праозиції, по-швидше обирай і поїхали!
             .specialized.row.justify-content-xl-between.justify-content-center
@@ -135,10 +139,13 @@ body
                 p.instruction.text-center нашому консультанту,
                 p.instruction.text-center і ми з радістю відповімо 
                 p.instruction.text-center.pb-3 на Ваші запитання
-                p.number.text-center.pb-2 +38 (050) 56 98 511
+                p.number.text-center.pb-2 +38 (050) 56 98 511                    
+                    <svg xmlns="http://www.w3.org/2000/svg" height="16px" viewBox="0 -960 960 960" width="17px" fill="#0099ff"><path d="M798-120q-125 0-247-54.5T329-329Q229-429 174.5-551T120-798q0-18 12-30t30-12h162q14 0 25 9.5t13 22.5l26 140q2 16-1 27t-11 19l-97 98q20 37 47.5 71.5T387-386q31 31 65 57.5t72 48.5l94-94q9-9 23.5-13.5T670-390l138 28q14 4 23 14.5t9 23.5v162q0 18-12 30t-30 12ZM241-600l66-66-17-94h-89q5 41 14 81t26 79Zm358 358q39 17 79.5 27t81.5 13v-88l-94-19-67 67ZM241-600Zm358 358Z"/></svg>
                 p.name-makeask.text-center.pb-1 Анна Миколаївна
                 p.pozhizny.text-center консультант
-                img.consult(src="../img/question-face.png", alt="")
+                picture
+                    source(srcset="../img/question-face.jpg")
+                    img.consult(src="../img/question-face.webp", alt="")
     .footer
     .copy-right.pb-2.pt-2
         p.text-center &copy 2016 Cars.com All rights reserved.
