--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang="en")
 body
     include components/mixin
     header
-        .container
+        .container.padding-mob
             nav.navbar.navbar-expand-lg(data-bs-theme="dark").pb-5.pt-4
                 .container-fluid.d-flex.justify-content-between
                     a.navbar-brand(href='#') 
@@ -43,7 +43,7 @@ body
                 a(href='#spec').svg-arrow
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M480-200 240-440l56-56 184 183 184-183 56 56-240 240Zm0-240L240-680l56-56 184 183 184-183 56 56-240 240Z"/></svg>
     main
-        section.container
+        section.container.padding-mob
             .plan.row
                 .info.col-12.col-xl-3.pb-4.pb-xl-0
                     h2 про нашу компанію
@@ -56,7 +56,7 @@ body
                         +cards(cardsFirst.excursion)
                         +cards(cardsFirst.special)
             hr
-        section.container
+        section.container.padding-mob
             .island-private.row.pb-5
                 .img-private.col-12.col-lg-3.col-xxl-4.pb-5
                     picture
@@ -75,25 +75,25 @@ body
                         .price-per-day.col.col-lg-4.p-4.text-center
                             p.price 575 грн./день
                             p.description.text-center В дану вартість входить обслуговування персоналу, вечеря і захоплюючі історії.
-        section.details-bg
+        section.details-bg.padding-mob
             .container
                 .details.row.py-4
-                    .catch-wave.col-12.col-xl-6.pb-5.pb-xl-0
+                    .catch-wave.col-12.col-md-5.pb-5.pb-xl-0.col-xl-6
                         h2.pb-4 спіймай хвилю 
                             span живи яскраво!
                         p.pb-4 
                             span Полюбляєш екстрим та пригоди? Тоді тобі точно до нас! Мрієш стати на сапборд, але ніяк не міг наважитсь? Наші досвдчені інструктори навчать тебе вміло «піймати хвилі» та відчути себе справжнім сьорфером!
                         a.btn(href="").btn-no-people детальніше
-                    .comment.col-12.col-xl-6.pt-3
+                    .comment.col-12.col-md-7.pt-3.col-xl-6
                         .svg-comment.d-flex.justify-content-center.pb-3
                             <svg version="1.2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 37" width="42" height="37"><style>.a{fill:#ffb700}</style><path class="a" d="m39.8 0h-13c-1.2 0-2.2 1-2.2 2.1v13.1c0 1.2 1 2.2 2.2 2.2h6.2q-0.1 5.1-2.4 8.2-1.8 2.4-5.4 4c-1.1 0.5-1.6 1.8-1 2.9l1.5 3.3c0.5 1 1.8 1.5 2.8 1q4.3-1.8 7.2-4.7 3.6-3.4 5-7.8 1.3-4.3 1.3-11.9v-10.3c0-1.1-1-2.1-2.2-2.1zm-35.2 36.8q4.2-1.8 7.2-4.7 3.6-3.4 4.9-7.7 1.3-4.4 1.3-12v-10.3c0-1.1-0.9-2.1-2.1-2.1h-13.1c-1.2 0-2.2 1-2.2 2.1v13.1c0 1.2 1 2.2 2.2 2.2h6.3q-0.2 5.1-2.4 8.2-1.8 2.4-5.4 4c-1.1 0.5-1.6 1.8-1.1 2.9l1.6 3.3c0.5 1 1.7 1.5 2.8 1z"/></svg>
                         p.description-comment.pb-3.pt-4 Чудова туристична фірма, що повністю виправдала мої очікування від подорожі. Я був приємно вражений екскурсіями, що для мене підібрали, працюють спражні професіонали своєї справи. 
                         p.name-comment.text-center Олег Набережний
                         p.pozhizny.text-center клієнт
                         picture
-                            source(srcset="../img/comment-face.jpg")
+                            source(srcset="../img/comment-face.png")
                             img.client(src="../img/comment-face.webp", alt="")
-        section.container
+        section.container.padding-mob
             .spec#spec
                 h2.text-center.pt-5.pb-1 Спеціальні пропозиції тижня
                 p.text-center.pb-4 Гарячі праозиції, по-швидше обирай і поїхали!
@@ -103,7 +103,7 @@ body
                 +cardsSecond(cardsSecond.onisland)
                 +cardsSecond(cardsSecond.serfing)
                 hr.mb-5.mt-5
-    footer.container.mb-5
+    footer.container.mb-5.padding-mob
         .additionally.row.d-flex.justify-content-lg-between.justify-content-center
             .additionally-text.col-12.col-lg-3
                 h2 додаткова інформація
@@ -144,7 +144,7 @@ body
                 p.name-makeask.text-center.pb-1 Анна Миколаївна
                 p.pozhizny.text-center консультант
                 picture
-                    source(srcset="../img/question-face.jpg")
+                    source(srcset="../img/question-face.png")
                     img.consult(src="../img/question-face.webp", alt="")
     .footer
     .copy-right.pb-2.pt-2
