--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -28,7 +28,10 @@ hr
         text-transform: uppercase
         color: #fff
         font-weight: 400
-        
+.padding-mob
+    padding: 0 50px
+    +media(1024)
+        padding: 0
 .btn
     min-width: 100%
     position: relative
@@ -46,7 +49,7 @@ hr
     &:hover
         background-color: #0099ff
         color: #000
-    +media(1024)
+    +media(768)
         min-width: 10rem
         display: inline-block
 .title
@@ -204,7 +207,7 @@ p.description,
         background-color: #ffb700
         border-color: #fff
         color: #fff
-    +media(1024)
+    +media(768)
         display: inline-block
 .buttons
     row-gap: 0.55rem
@@ -214,44 +217,48 @@ p.description,
                 max-width: 180px
         +media(1440)
                 max-width: 220px
-        +media(2100)
+        +media(1960)
                 max-width: 260px
 .all-planes
-    a
-        position: relative
-        text-decoration: none
-        font-size: 0.66rem
-        letter-spacing: 0rem
-        text-transform: uppercase
-        color: #0099ff
-        font-weight: 400
+    display: none
+    position: relative
+    text-decoration: none
+    font-size: 0.66rem
+    letter-spacing: 0rem
+    text-transform: uppercase
+    color: #0099ff
+    font-weight: 400
+    transition: all 0.5s ease
+    &::before
+        content: ""
+        position: absolute
+        width: 0.61rem
+        height: 0.61rem
+        border-radius: 50%
+        border: 0.05rem solid #0099ff
+        top: 0.05rem
+        right: -0.83rem
         transition: all 0.5s ease
-        &::before
-            content: ""
-            position: absolute
-            width: 0.61rem
-            height: 0.61rem
-            border-radius: 50%
-            border: 0.05rem solid #0099ff
-            top: 0.05rem
-            right: -0.83rem
-            transition: all 0.5s ease
+    &::after
+        content: ""
+        position: absolute
+        width: 0.22rem
+        height: 0.22rem
+        top: 0.27rem
+        right: -0.61rem
+        border-left: 0.05rem solid #0099ff
+        border-top: 0.05rem solid #0099ff
+        transform: rotate(135deg)
+        transition: all 0.5s ease
+    &:hover
+        color: #000
+        &::before,
         &::after
-            content: ""
-            position: absolute
-            width: 0.22rem
-            height: 0.22rem
-            top: 0.27rem
-            right: -0.61rem
-            border-left: 0.05rem solid #0099ff
-            border-top: 0.05rem solid #0099ff
-            transform: rotate(135deg)
-            transition: all 0.5s ease
-        &:hover
-            color: #000
-            &::before,
-            &::after
-                border-color: #000
+            border-color: #000
+    +media(1024)
+        display: inline
+.see-all-planes-disable
+    display: none
 .information-private
     h2
         font-size: 1.3rem
@@ -278,9 +285,13 @@ p.description,
     row-gap: 1.11rem
 .price-per-day
     background-color: #edf2f5
+.details
+    align-items: center
 .details-bg
-    background: url("../img/comment.png") no-repeat center/cover
-    padding: 5rem 0 5.5rem
+    background: url("../img/comment.webp") no-repeat center/cover
+    padding: 5rem 3rem 5.5rem
+    +media(1024)
+        padding: 5rem 0 5.5rem
 .btn-no-people
     padding: 0.62rem 2.25rem
 .catch-wave
