--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,7 +3,7 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
-        title Document
+        title МОРСЬКІ ПРИГОДИ! - Чудове тур агенство, яке допоможе вам провести свою відпустку в незабуваємі пригоди, та приємні спогади!
         link(rel="stylesheet" href="css/styles.css")
 body
     include components/mixin
@@ -68,7 +68,7 @@ body
                         .order-tour.col-12.col-lg-8
                             p.phuket.pb-4 Пхукет - курортно-туристична Мекка Таїланду. Білосніжний пісок, і бірюзове море, і мальовничі скелі, а на них же, трохи вище - буйна тропічна рослинність. Все це можна побачити на власні очі.
                             .buttons.row
-                                p.col-12.col-md-6
+                                p.col-12.col-md-6.text-end.text-lg-start
                                     a(href="#").btn замовити тур 
                                 p.col-12.col-md-6
                                     a(href="#").btn-blue детальніше 
