--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -41,7 +41,7 @@ hr
     border-radius: 1.7rem
     text-transform: uppercase
     color: #fff
-    padding: 0.3rem 1.2rem
+    padding: 0.62rem 2.25rem
     font-size: 0.8rem
     letter-spacing: 0.05rem
     transition: all 0.5s ease
@@ -78,17 +78,20 @@ hr
         position: absolute
         left: 50%
         width: 35%
-        border-left: 0.2rem solid rgba(240,240,240,0.2)
-        border-right: 0.2rem solid rgba(240,240,240,0.2)
         transform: translateX(-50%)
+        +media(1024)
+            border-left: 0.2rem solid rgba(240,240,240,0.2)
+            border-right: 0.2rem solid rgba(240,240,240,0.2)
     &::after
         bottom: -4.2rem
         height: 5.5rem
-        border-bottom: 0.2rem solid rgba(240,240,240,0.2)
+        +media(1024)
+            border-bottom: 0.2rem solid rgba(240,240,240,0.2)
     &::before
         top: 0rem
         height: 2rem
-        border-top: 0.2rem solid rgba(240,240,240,0.2)
+        +media(1024)
+            border-top: 0.2rem solid rgba(240,240,240,0.2)
         // rgba(240,240,240,0.1)
 .choose
     padding-top: 25.5rem
@@ -201,7 +204,7 @@ p.description,
     text-decoration: none
     background-color:   transparent
     border: 0.11rem solid #0099ff
-    padding: 0.3rem 1.2rem
+    padding: 0.62rem 2.25rem
     transition: all 0.5s ease
     &:hover
         background-color: #ffb700
@@ -214,9 +217,9 @@ p.description,
     flex-wrap: wrap
     p
         +media(1024)
-                max-width: 180px
+                max-width: 210px
         +media(1440)
-                max-width: 220px
+                max-width: 240px
         +media(1960)
                 max-width: 260px
 .all-planes
@@ -292,8 +295,6 @@ p.description,
     padding: 5rem 3rem 5.5rem
     +media(1024)
         padding: 5rem 0 5.5rem
-.btn-no-people
-    padding: 0.62rem 2.25rem
 .catch-wave
     h2
         margin: 0
@@ -512,7 +513,7 @@ p.description,
     color: #fefefe
     font-weight: 400
 .btn-additionally
-    padding: 0.38rem 1rem
+    padding: 0.62rem 2.25rem
     text-decoration: none
     font-size: 0.66rem
     letter-spacing: 0rem
