--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -91,8 +91,8 @@ body
                         p.name-comment.text-center Олег Набережний
                         p.pozhizny.text-center клієнт
                         picture
-                            source(srcset="../img/comment-face.png")
-                            img.client(src="../img/comment-face.webp", alt="")
+                            source(srcset="img/comment-face.png")
+                            img.client(src="img/comment-face.webp", alt="")
         section.container.padding-mob
             .spec#spec
                 h2.text-center.pt-5.pb-1 Спеціальні пропозиції тижня
@@ -144,8 +144,8 @@ body
                 p.name-makeask.text-center.pb-1 Анна Миколаївна
                 p.pozhizny.text-center консультант
                 picture
-                    source(srcset="../img/question-face.png")
-                    img.consult(src="../img/question-face.webp", alt="")
+                    source(srcset="img/question-face.png")
+                    img.consult(src="img/question-face.webp", alt="")
     .footer
     .copy-right.pb-2.pt-2
         p.text-center &copy 2016 Cars.com All rights reserved.
