--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -159,7 +159,7 @@ hr
         height: 17px
         top: -35px
         left: -8px
-        background: url("/img/starforflag.png")
+        background: url("../img/starforflag.png")
         transform: rotate(10deg)
 .bicycle
     position: relative
@@ -513,7 +513,7 @@ p.description,
     color: #fefefe
     font-weight: 400
 .btn-additionally
-    padding: 0.62rem 2.25rem
+    padding: .50rem 1.2rem
     text-decoration: none
     font-size: 0.66rem
     letter-spacing: 0rem
