--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -29,7 +29,7 @@ hr
         color: #fff
         font-weight: 400
 .padding-mob
-    padding: 0 50px
+    padding: 0 15px
     +media(1024)
         padding: 0
 .btn
@@ -303,12 +303,14 @@ p.description,
 .catch-wave
     h2
         margin: 0
-        font-size: 3.11rem
+        font-size: 2.11rem
         letter-spacing: 0.11rem
         line-height: 1.1em
         text-transform: uppercase
         color: #fff
         font-weight: 400
+        +media(768)
+            font-size: 3.11rem
         span
             color: #0099ff
     p
