--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -244,16 +244,16 @@ p.description,
         height: 0.61rem
         border-radius: 50%
         border: 0.05rem solid #0099ff
-        top: 0.05rem
-        right: -0.83rem
+        top: 0.08rem
+        right: -0.8rem
         transition: all 0.5s ease
     &::after
         content: ""
         position: absolute
         width: 0.22rem
         height: 0.22rem
-        top: 0.27rem
-        right: -0.61rem
+        top: .27rem
+        right: -0.55rem
         border-left: 0.05rem solid #0099ff
         border-top: 0.05rem solid #0099ff
         transform: rotate(135deg)
@@ -296,8 +296,8 @@ p.description,
 .details
     align-items: center
 .details-bg
-    background: url("../img/comment.webp") no-repeat center/cover
-    padding: 5rem 3rem 5.5rem
+    background: url("../img/commentg.webp") no-repeat center/cover
+    padding: 5rem 0.94rem 5.5rem
     +media(1024)
         padding: 5rem 0 5.5rem
 .catch-wave
