--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -93,6 +93,8 @@ hr
         +media(1024)
             border-top: 0.2rem solid rgba(240,240,240,0.2)
         // rgba(240,240,240,0.1)
+    +media(2600)
+        margin-bottom: 150px
 .choose
     padding-top: 11.5rem
     padding-bottom: 2.2rem
@@ -451,7 +453,7 @@ p.description,
 .biketour,
 .onisland,
 .serfing
-    height: 334px
+    min-height: 334px
     position: relative
     max-width: 16.9rem
     padding: 0
@@ -468,6 +470,8 @@ p.description,
                 width: 360px
     +media(1440)
         max-width: 15.05rem
+    +media(2000)
+        min-height: none
 .bicycle-flag
     position: absolute
     top: 0
