--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -298,7 +298,7 @@ p.description,
 .details
     align-items: center
 .details-bg
-    background: url("../img/commentg.webp") no-repeat center/cover
+    background: url("../img/comment.webp") no-repeat center/cover
     padding: 5rem 0.94rem 5.5rem
     +media(1024)
         padding: 5rem 0 5.5rem
